# ECLAPatientmonitorClient

./: .gitignore  CMakeCache.txt  CMakeLists.txt  README.md  main-sig.cpp  main-test.cpp  main.cpp  main_client.cpp  main_imgui.cpp  main_server.cpp  vcpkg.json
PCANModule/: CanAdapter.cpp  CanAdapter.h  DataManager.cpp  DataManager.h  DataPoint.cpp  DataPoint.h
ParseECLA/: Constants.cpp  Constants.h  Id.cpp  Id.h  IdGroup.cpp  IdGroup.h  IdGroupList.hpp  IdManager.cpp  IdManager.h  IdManagerTest.cpp  IdType.cpp  IdType.h  LRUCache.hpp  SmartECLA_IDs.h
cmake/: Findpcanbasic.cmake
documentation/html/: _data_point_8cpp.html  _data_point_8h.html  _data_point_8h.js  _data_point_8h_source.html  _display_application_8cpp.html  _display_application_8cpp.js  _display_application_8h.html  _display_application_8h.js  _display_application_8h_source.html  _display_manager_8cpp.html  _display_manager_8cpp.js  _display_manager_8h.html  _display_manager_8h.js  _display_manager_8h_source.html  _socket_8cpp.html  _socket_8h.html  _socket_8h_source.html  _socket_client_8cpp.html  _socket_client_8h.html  _socket_client_8h_source.html  annotated.html  annotated_dup.js  class_data_point-members.html  class_data_point.html  class_data_point.js  class_display_application-members.html  class_display_application.html  class_display_application.js  class_display_manager-members.html  class_display_manager.html  class_display_manager.js  class_receive___state-members.html  class_receive___state.html  class_socket_client-members.html  class_socket_client.html  class_socket_client.js  class_u_d_p_socket-members.html  class_u_d_p_socket.html  class_w_s_a_session-members.html  class_w_s_a_session.html  (+28 more)
documentation/html/search/: all_0.js  all_1.js  all_10.js  all_2.js  all_3.js  all_5.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  defines_0.js  defines_1.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  files_0.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  (+12 more)
documentation/latex/: _data_point_8cpp.tex  _data_point_8h.tex  _data_point_8h_source.tex  _display_application_8cpp.tex  _display_application_8h.tex  _display_application_8h_source.tex  _display_manager_8cpp.tex  _display_manager_8h.tex  _display_manager_8h_source.tex  _socket_8h.tex  _socket_8h_source.tex  _socket_client_8h.tex  _socket_client_8h_source.tex  annotated.tex  class_data_point.tex  class_display_application.tex  class_display_manager.tex  class_socket_client.tex  definitions_8h.tex  definitions_8h_source.tex  dir_896324c4e341186b1dedbffbfee833a2.tex  dir_b2f33c71d4aa5e7af42a1ca61ff5af1b.tex  dir_d44c64559bbebec7f509842c48db8b23.tex  files.tex  hierarchy.tex  main_8cpp.tex  refman.tex  struct_data_point_encoded.tex
include/: DisplayApplication.h  DisplayManager.h  MeasurementVector.h  Socket.h  SocketClient.h  csharpWrapper.h  definitions.h
source/: DisplayApplication.cpp  DisplayManager.cpp  MeasurementVector.cpp  Socket.cpp  SocketClient.cpp
